[metadata]
name = yrk_oo 
version = 0.0.2
description = Object oriented interface library for the York Robotics Kit
long_description = file: README.md
url='https://github.com/MageJohn/yrk-oo',

[options]
package_dir =
    =src
packages = find:
install_requires =
    smbus2

[options.packages.find]
where=src
